{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 19,
  "lineage": "72e8efec-0813-5e18-a9be-52ba6b111b09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-dev-env-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418943441045:internet-gateway/igw-037edbcbe6ce4e429",
            "id": "igw-037edbcbe6ce4e429",
            "owner_id": "418943441045",
            "tags": {
              "name": "terraform-dev-env-internet-gateway"
            },
            "tags_all": {
              "name": "terraform-dev-env-internet-gateway"
            },
            "vpc_id": "vpc-08a59ce1c01464bf1"
          },
          "dependencies": [
            "aws_vpc.terraform-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "global_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-037edbcbe6ce4e429",
            "id": "r-rtb-080d5a5d36a8227a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080d5a5d36a8227a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-dev-env-ig",
            "aws_route_table.public_route_table_dev_env",
            "aws_vpc.terraform-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_dev_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418943441045:route-table/rtb-080d5a5d36a8227a2",
            "id": "rtb-080d5a5d36a8227a2",
            "owner_id": "418943441045",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037edbcbe6ce4e429",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terrraform_dev_env_route_table"
            },
            "tags_all": {
              "Name": "terrraform_dev_env_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a59ce1c01464bf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07606ece6fa306812",
            "route_table_id": "rtb-080d5a5d36a8227a2",
            "subnet_id": "subnet-02fde812ec1c543c6"
          },
          "dependencies": [
            "aws_route_table.public_route_table_dev_env",
            "aws_subnet.public-subnet-dev-env",
            "aws_vpc.terraform-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418943441045:security-group/sg-09b2bc5fc1675dc70",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b2bc5fc1675dc70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows global traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Public_security_group",
            "name_prefix": "",
            "owner_id": "418943441045",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_global_traffic"
            },
            "tags_all": {
              "Name": "allow_global_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a59ce1c01464bf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-dev-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418943441045:subnet/subnet-02fde812ec1c543c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fde812ec1c543c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418943441045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-dev-evn-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-dev-evn-public-subnet"
            },
            "vpc_id": "vpc-08a59ce1c01464bf1"
          },
          "dependencies": [
            "aws_vpc.terraform-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-dev-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418943441045:vpc/vpc-08a59ce1c01464bf1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e88984bbc23a6ab3",
            "default_route_table_id": "rtb-00ab7dd6d822446b3",
            "default_security_group_id": "sg-00cb4db4120f2b3ab",
            "dhcp_options_id": "dopt-024a4310efd7ffec3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a59ce1c01464bf1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ab7dd6d822446b3",
            "owner_id": "418943441045",
            "tags": {
              "name": "dev-env"
            },
            "tags_all": {
              "name": "dev-env"
            }
          }
        }
      ]
    }
  ]
}